--- a/res/project/report.tex
+++ b/res/project/report.tex
@@ -188,11 +188,11 @@ We saw earlier in the course that Sanger reads, typically 700 -- 1000 bp in leng
 
 \section{Background}
 \subsection{Error Correction \label{ec}}
-Error correction has long been recognized as a critical and difficult part of the so called graph-based assemblers (de Bruijn graph). It also has significant impact on alignment and in other next-generation sequencing applications such as re-sequencing. Sequencing errors complicate analysis, which normally requires that reads be aligned to each other during assemble or to a reference genome for single-nucleotide polymorphism (SNP) detection. Mistakes during the overlap computation in genome assembly may leave gaps in the assembly, while false overlaps may create ambiguous paths \cite{quake}. In genome re-sequencing projects, reads are aligned to a reference genome, usually allowing for a fixed number of mismatches due to either SNPs or sequencing errors. In most cases, the reference genome and the genome being newly sequenced will differ, sometimes substantially. Variable regions are more difficult to align because mismatches from both polymorphisms and sequencing errors occur, but if errors can be eliminated, more reads will align and the sensitivity for variant detection will improve.
+Error correction has long been recognized as a critical and difficult part of the so called graph-based assemblers (de Bruijn graph). It also has significant impact on alignment and in other next-generation sequencing applications such as re-sequencing. Sequencing errors complicate analysis, which normally requires that reads be aligned to each other during assemble or to a reference genome for single-nucleotide polymorphism (SNP) detection. Mistakes during the overlap computation in genome assembly may leave gaps in the assembly, while false overlaps may create ambiguous paths \cite{quake}. In genome re-sequencing projects, reads are aligned to a reference genome, usually allowing for a fixed number of mismatches due to either SNPs or sequencing errors. In most cases, the reference genome and the genome being newly sequenced will differ, sometimes substantially. Variable regions are more difficult to align because mismatches from both polymorphisms and sequencing errors occur, but if errors can be eliminated, more reads will align and the sensitivity for variant detection will improve.\\
 
-Fortunately, the low cost of second-generation sequencing makes it possible to obtain highly redundant coverage of a genome, which can be used to correct sequencing errors in the reads before assembly or alignment. But, this significantly increases the size of the dataset. In order to deal with the computational challenges of working with such large data sets, a number of methods have been proposed for storing k-mers efficiently. Most de Bruijn graph assemblers store k-mers using 2 bits to encode each nucleotide, so that each k-mer takes $k/4$ bytes. The k-mers are then stored in a hash table, usually with some associated information such as coverage and neighborhood information in the de Bruijn graph. A complementary strategy for reducing memory usage is based on the observation that in current data sets, a large fraction of the observed k-mers may arise from sequencing errors. Most of these occur uniquely in the data, and hence they greatly increase the memory requirements of de novo assembly without adding much information. For this reason, it is frequently helpful to either discard unique k-mers prior to building the graph, or to attempt to correct them if they are similar to other, much more \emph{abundant}, k-mers. A number of related methods have been proposed to perform this error correction step, all guided by the goal of finding the minimum number of single base edits (edit distance) to the read that make all k-mers trusted.
+Fortunately, the low cost of second-generation sequencing makes it possible to obtain highly redundant coverage of a genome, which can be used to correct sequencing errors in the reads before assembly or alignment. But, this significantly increases the size of the dataset. In order to deal with the computational challenges of working with such large data sets, a number of methods have been proposed for storing k-mers efficiently. Most de Bruijn graph assemblers store k-mers using 2 bits to encode each nucleotide, so that each k-mer takes $k/4$ bytes. The k-mers are then stored in a hash table, usually with some associated information such as coverage and neighborhood information in the de Bruijn graph. A complementary strategy for reducing memory usage is based on the observation that in current data sets, a large fraction of the observed k-mers may arise from sequencing errors. Most of these occur uniquely in the data, and hence they greatly increase the memory requirements of de novo assembly without adding much information. For this reason, it is frequently helpful to either discard unique k-mers prior to building the graph, or to attempt to correct them if they are similar to other, much more \emph{abundant}, k-mers. A number of related methods have been proposed to perform this error correction step, all guided by the goal of finding the minimum number of single base edits (edit distance) to the read that make all k-mers trusted.\\
 
-A common approach of error correction of reads is to determine a threshold and correct k-mers whose multiplicities fall below a threshold \cite{chikhi,quake,musket}. Choosing an appropriate threshold is crucial since a low threshold will result in too many uncorrected errors, while a high threshold will result in the loss of correct k-mers. The histogram of the multiplicities of k-mers will show a mixture of two distributions — that of the error-free k-mers, and that of the erroneous k-mers. When the coverage is high and uniform, these distributions are centered far apart and can be separated without much loss using a cutoff threshold; such methods therefore achieve excellent results \cite{quake}. 
+A common approach of error correction of reads is to determine a threshold and correct k-mers whose multiplicities fall below a threshold \cite{chikhi,quake,musket}. Choosing an appropriate threshold is crucial since a low threshold will result in too many uncorrected errors, while a high threshold will result in the loss of correct k-mers. The histogram of the multiplicities of k-mers will show a mixture of two distributions — that of the error-free k-mers, and that of the erroneous k-mers. When the coverage is high and uniform, these distributions are centered far apart and can be separated without much loss using a cutoff threshold; such methods therefore achieve excellent results \cite{quake}. \\
 
 There are some papers that develop methods to correct errors without an assumption of non-uniform coverage. One such method is Hammer \cite{hammer}
 Consider two k-mers that are within a small Hamming distance and present in the read dataset. If our genome does not contain many non-exact repeats, then it is likely that both of these k-mers were generated by the k-mer among them that has higher multiplicity. In this way, we can correct the lower multiplicity k-mer to the higher multiplicity one, without relying on uniformity. This can be further generalized by considering the notion of the Hamming graph, whose vertices are the distinct k-mers (annotated with their multiplicities) and edges connect k-mers with a Hamming distance less than or equal to a parameter τ. Hammer is based on a combination of the Hamming graph and a simple probabilistic model described in great detail in \cite{hammer}.
@@ -228,19 +228,20 @@ The core abstraction in Storm is the \emph{stream}. A stream is an unbounded seq
 \subsection{Storm Topology}
 \begin{figure}[ht!]
 \centering
-\includegraphics[width=100mm]{topo2.png}
+\includegraphics[width=120mm]{topology.pdf}
 \caption{\tiny{The storm pipeline used for error correction. The nodes in green are the spouts, the diamond shaped nodes are the bolts. Streams are represented by arrows and are annotated with the source and destination cardinalities.}}
 \label{overflow}
 \end{figure}
-The figure gives a schematic view of the pipeline we have used for error correction. The nodes in green are the spouts, the diamond shaped nodes are the bolts. Streams are represented by arrows and are annotated with the source and destination cardinalities. These cardinalities correspond to the number of \emph{executors} performing a task in parallel. 
+The figure gives a schematic view of the pipeline we have used for error correction. The nodes in green are the spouts, the diamond shaped nodes are the bolts. Streams are represented by arrows and are annotated with the source and destination cardinalities. These cardinalities correspond to the number of \emph{executors} performing a task in parallel. The process of detecting and correcting errors using this topology is described below.
 
-\subsubsection{Storing and Counting k-mers using Bloom Filter}
-To count all non-unique k-mers we use a Bloom filter B and a simple hash table T to store k-mers. The Bloom filter keeps track of k-mers we have encountered so far and acts as a \emph{staging area}, while the hash table stores all the k-mers seen at least twice so far. The idea is to use the memory-efficient Bloom filter to store implicitly all k-mers seen so far, while only inserting non-unique k-mers into the hash table. Initially both the Bloom filter and the hash table are empty. All k-mers are generated sequentially from the sequencing reads. For each k-mer, x, we check if x is in the Bloom filter B. If it is not in B then we update the appropriate bits in B to indicate that it has now been observed. If x is in B, then we check if it is in T and bump its count, and if not, we add it to T.
+\subsection{Storing and Counting k-mers using Bloom Filter}
+To count all non-unique k-mers we use a Bloom filter B and a simple hash table T to store k-mers. The Bloom filter keeps track of k-mers we have encountered so far and acts as a \emph{staging area}, while the hash table stores all the k-mers seen at least twice so far. The idea is to use the memory-efficient Bloom filter to store implicitly all k-mers seen so far, while only inserting non-unique k-mers into the hash table. Initially both the Bloom filter and the hash table are empty. All k-mers are generated sequentially from the sequencing reads. For each k-mer, x, we check if x is in the Bloom filter B. If it is not in B then we update the appropriate bits in B to indicate that it has now been observed. If x is in B, then we check if it is in T and bump its count, and if not, we add it to T.\\
 
-This scheme guarantees that all k-mers with a coverage of 2 or more are inserted into T. However a small proportion of unique k-mers will be inserted into T due to false positive queries to B. After the first pass through the sequence data, one can re-iterate over T to obtain exact counts of the k-mers in T and then simply delete all unique k-mers or perhaps all the k-mers with \emph{multiplicity < m}. The time spent on the second round is at most $O(G)$, and tends to be less since hash table lookups are generally faster than insertions.
+All these k-mer statistics (the sketch, some nucleotide counts per position in the read and the HashTable) are stored within an in-memory state and continuously updated as the stream arrives. The reads are then persisted in a back-end store (single node MySql, 3-node Impala). The stream rate was configured at 100,000 reads per second. We were mostly able to keep up with the stream with 32/64 executors spread across 4 storm nodes (The scale-up wasn't great when using 64 executors due to MySql connection sharing). Occasionally, the network glitches caused storm to replay the messages from the transactional spouts because of which we had to make our state updater idempotent. Not everything was perfect with storm - storm is built to be fail fast - and worker nodes restart as soon as they have a problem. This increases the chances of losing the memory mapped state unless we persist them, perhaps to a fast column store. This can be done easily in storm ${BaseStateUpdater<State>}$'s commit() method. It should also be noted that configuring storm batches appropriately is extremely important. When we chose a small batch size, the cost of acknowledgments was much higher and thus did not allow us to throttle the spouts as well as we wanted.\\
 
-All these k-mer statistics (the sketch, some nucleotide counts per position in the read and the HashTable) are stored within an in-memory state and continuously updated as the stream arrives. The reads are then persisted in a back-end store (single node MySql, 3-node Impala). The stream rate was configured at 100,000 reads per second. We were mostly able to keep up with the stream with 32/64 executors spread across 4 storm nodes (The scale-up wasn't great when using 64 executors due to MySql connection sharing). Occasionally, the network glitches caused storm to replay the messages from the transactional spouts because of which we had to make our state updater idempotent. Not everything was perfect with storm - storm is built to be fail fast - and worker nodes restart as soon as they have a problem. This increases the chances of losing the memory mapped state unless we persist them, perhaps to a fast column store. This can be done easily in storm \emph{BaseStateUpdater<State>}'s commit() method. It should also be noted that configuring storm batches appropriately is extremely important. When we chose a small batch size, the cost of acknowledgments was much higher and thus did not allow us to throttle the spouts as well as we wanted.
+This scheme guarantees that all k-mers with a coverage of 2 or more are inserted into T. However a small proportion of unique k-mers will be inserted into T due to false positive queries to B. After the first pass through the sequence data, one can re-iterate over T to obtain exact counts of the k-mers in T and then simply delete all unique k-mers or perhaps all the k-mers with $multiplicity < m$. The time spent on the second round is at most $O(G)$, and tends to be less since hash table lookups are generally faster than insertions.\\
 
+In our implementation, we use a distributed Bloom Filter that only counts a \emph{partition} of the so-called k-mer stream. 
 
 \subsection{Localizing errors}
 We choose a cutoff (multiplicity = 5, in our experiments) to separate trusted and untrusted k-mers based on our intuition. But in general this approach is flawed because the datasets need not have uniform coverage or our genome  may contain many non-exact repeats. A highly sophisticated approach to choosing this cutoff is discussed in \cite{chikhi,quake}. Once we choose the cutoff, all reads containing an untrusted k-mer become candidates for correction. In most cases the pattern of untrusted k-mers will localize the sequencing error to a small region. The figure \ref{lc} from \cite{quake} makes this notion very clear. The reader is advised to look it up to find more details.
@@ -252,19 +253,24 @@ We choose a cutoff (multiplicity = 5, in our experiments) to separate trusted an
 \end{figure} 
 
 \subsection{Sequencing error probability model : Naive Bayes}
-The Naive Bayes Classifier technique is based on the so-called Bayesian theorem and is particularly suited when the dimensionality of the inputs is high often seen in Natural Language Processing. Despite its simplicity, Naive Bayes can often outperform more sophisticated classification methods. However, despite its simplicity it is very easy to fall into certain pitfalls due to the poor understanding of the central assumption behind Naive Bayes, namely conditional independence. We take our chances and jump on the bandwagon and throw this model at the sequencing error correction problem. Of course, we make some highly inappropriate assumptions to ensure our correction model is slick and fast. First, we must define the likelihood of a set of corrections. Let the dataset contain $n$ reads.  Let O = $O_1, O_2,..., O_n$ represent the observed nucleotides at a given position in reads $1, 2,..., n$ respectively, and A = $A_1, A_2,..., A_n$ the actual nucleotides at the same position in reads $1, 2,..., n$ of the DNA. Then 
+The Naive Bayes Classifier technique is based on the so-called Bayesian theorem and is particularly suited when the dimensionality of the inputs is high, often the case in Natural Language Processing. Despite its simplicity, Naive Bayes can often outperform more sophisticated classification methods. However, despite its simplicity it is very easy to fall into certain pitfalls due to the poor understanding of the central assumption behind Naive Bayes, namely conditional independence. We take our chances and jump on the bandwagon and throw this model at the sequencing error correction problem. Of course, we make some highly inappropriate assumptions to ensure our correction model is slick and fast. First, we must define the likelihood of a set of corrections. Let the dataset contain $n$ reads.  Let O = $O_1, O_2,..., O_n$ represent the observed nucleotides at a given position in reads $1, 2,..., n$ respectively, and A = $A_1, A_2,..., A_n$ the actual nucleotides at the same position in reads $1, 2,..., n$ of the DNA. Then 
 
 \begin{displaymath} P(A = a_k \vert O_1,\dots,O_n) = \frac{P(A=a_k) \ p(O_1,\dots,O_n\vert A)}{p(O_1,\dots,O_n)}. \end{displaymath}\\
 In plain English the above equation can be written as
 \begin{displaymath}
   \mbox{posterior} = \frac{\mbox{prior} \times \mbox{likelihood}}{\mbox{evidence}}.
 \end{displaymath}
-Now we make the assumption that position $p_k$ in read $r_i$ is conditionally independent of position $p_j$ in read $r_j$. So, now
+Now we make the assumption that position $p_k$ in read $r_i$ is conditionally independent of position $p_j$ in read $r_j$ given $A$. So, now
 \begin{displaymath} P(A = a_k\vert O_1,\dots,O_n) = \frac{1}{Z}  P(A = a_k) \prod_{i=1}^n p(O_i \vert A = a_k) \end{displaymath}
-where $Z$ (the evidence) is a scaling factor dependent only on $O_1,\dots,O_n$, that is, a constant if the values of the observed variables $O_i$ are known. Because we compare likelihoods, $P(O_i = o_i)$ is the same for all assignments to A and is ignored. $P(A_i = a_k)$ is defined by the GC\% of the genome, which we estimate by counting Gs and Cs in the sequencing reads or by referring to the reference genome. In case of E.Coli, the GC\% is 51\% which we hard-code for our testing. The $P(O_i \vert A = a_k)$ is estimated from the \textit{trusted} portions of the read.
+where $Z$ (the evidence) is a scaling factor dependent only on $O_1,\dots,O_n$, that is, a constant if the values of the observed variables $O_i$ are known. Because we compare likelihoods, $P(O_i = o_i)$ is the same for all assignments to A and is ignored. $P(A_i = a_k)$ is defined by the GC\% of the genome, which we estimate by counting Gs and Cs in the sequencing reads or by referring to the reference genome. In case of E.Coli, the GC\% is 51\% which we hard-code for our testing. The $P(O_i \vert A = a_k)$ is estimated from the \textit{trusted} portions of the read. In machine learning terminology, the trusted k-mers (we can probably relax this to contain all k-mers to get a better generalization) act as our \emph{labeled training set}. That is, to estimate $P(O_i \vert A_i)$ for all values $A_i$ can take namely ${A,C,T,G}$, we set the value $P(O_i = o_i \vert A_i = o_i) = p_i$ in the conditional probability table. We distribute the rest of the probability i.e. $(1-p_i)$ among the other $A_i \neq o_i$ according to their prior probabilities (estimated from their GC content).  
+
 \section{Results}
+In this paper, we pose a question; is sequencing error correction a streaming application? We argue and empirically prove that Storm, a continuous event processing system, is more than capable of handling these kind of loads and may pave a way to solve several more problems in real time. With Storm's capability to parallelize different parts to the topology to different degrees, we can fine tune our computation to get \emph{optimal} results. We also present a method that identifies all the k-mers that occur more than once in a DNA sequence data set. Our method does this using a Bloom filter, a probabilistic data structure that stores all the observed k-mers implicitly in memory with greatly reduced memory requirements. For our test data sets (E. coli K12 substrain MG1655 [SRA:SRX000429]), we see up to 50\% savings in memory usage compared to naive approach, with modest costs in computational speed. This approach may reduce memory requirements for any algorithm that starts by counting k-mers in sequence data with errors. \\
+
+We also propose to use a straight forward but highly competitive probabilistic model in Naive Bayes to model sequencing errors. We have seen some interesting and positive results of employing this model. However, we aren't quite confident about the completeness of our tests. Unfortunately, due to the time constraint, we have not been able to complete all the tests we hoped to run. Hence we leave this for future work.
 
 \section{Conclusions}
+Counting k-mers from sequencing data is an essential component of many recent methods for genome assembly from short read sequence data. They are also found to be useful in alignment and variant detection. However, in current data sets, it is frequently the case that more than half of the reads contain errors and are observed just once. Since these error-containing k-mers are so large in number, they can overwhelm the memory capacity of available high-performance machines, and they increase the computational complexity of downstream analysis. In this paper, we describe a straightforward application of the Bloom filter to help identify and store the reads that are present more than more than $m$ times in a data set, and hence likely to be trusted. Although one might claim that such methods trades off reduced memory usage for an increase in processing time, our use of fast, simple but sufficiently strong hash function aka. murmur alleviates any such concerns.
 
 \section{Advisors}
 \begin{itemize}
